<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinkU</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>

    <!-- Empty text -->
    <string name="empty_events_list">There are no events around you.</string>

    <!-- Placeholders -->
    <string name="placeholder_events_item_name">Event title</string>
    <string name="placeholder_events_item_title">Event title</string>
    <string name="placeholder_events_item_description">Event description</string>
    <string name="placeholder_events_item_time">Time</string>
    <string name="placeholder_events_item_day">Date</string>
    <string name="placeholder_events_item_location">Pick location</string>
    <string name="placeholder_events_item_attendees">Participants</string>
    <string name="title_activity_create_new_event">New event</string>
    <string name="title_activity_edit_event">Edit event</string>

    <!-- Create new event -->
    <string name="title_map">Map</string>
    <string name="title_events">Events</string>
    <string name="progress_create_event">Creating event …</string>
    <string name="placeholder_category">Event type</string>

    <!-- Editing event -->
    <string name="progress_edit_event">Updating event …</string>

    <!-- Login / SignUp -->
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="slogan">Because moments are around you</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_logout">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet">Connect to a network, then try again.</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="progress_load_events">Loading events …</string>
    <string name="prompt_email">Email</string>
    <string name="action_reset">Reset</string>
    <string name="forgotton_password">Forgot your password?</string>
    <string name="reset_password_dialog_title">Reset password</string>
    <string name="reset_password_dialog_explanation">Enter email to receive a reset link</string>
    <string name="linku_logo">LinkU Logo</string>
    <string name="title_feed">Feed</string>
    <string name="action_refresh_feed">Refresh Feed</string>
    <string name="placeholder_secondary">Secondary information</string>
    <string name="action_edit">Edit</string>
    <string name="progress_get_event">Fetching event …</string>

    <string name="no_attendees">No participants yet. Be the first to join!</string>
    <string name="title_activity_about">About</string>

    <string name="about_tos">Terms of Service</string>
    <string name="about_pp">Privacy Policy</string>
    <string name="about_safety">Safety Guidelines</string>
    <string name="linku_website">getlinku.com</string>
    <string name="welcome_legal">By using this app, you agree to the &lt;a href="http://www.getlinku.com/terms-of-use.html">Terms of Service&lt;/a> and &lt;a href="http://www.getlinku.com/privacy.html">Privacy Policy&lt;/a>. &lt;br&lt;/> &lt;br&lt;/> We suggest you also take a look at the &lt;a href="http://www.getlinku.com/safety.html">Safety Guidelines&lt;/a> for tips on staying safe when going to events with strangers.
</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="scan">Scan code</string>
    <string name="checkin">Check in</string>
    <string name="cancel">Cancel</string>
    <string name="current_event_title">CURRENT EVENT</string>
    <string name="scanning">Scanning for QR code</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="message_checkedin">Checked in.</string>
    <string name="title_activity_create_edit_event">CreateEditEventActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_save">Save</string>
</resources>
