<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary"
    tools:context="com.bdlabs_linku.linku.AboutActivity"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/imageViewContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/linku_logo"
            android:src="@drawable/linku_logo_white"
            android:layout_gravity="bottom" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewContainer"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="@dimen/keyline_1"
        android:layout_marginBottom="@dimen/keyline_1">

        <TextView android:text="Version" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
            android:id="@+id/about_version" />

        <TextView android:text="@string/linku_website"
            android:id="@+id/about_website"
            style="@style/about_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="@dimen/keyline_1"
        android:layout_marginBottom="@dimen/keyline_1">

        <TextView android:text="@string/about_tos"
            android:id="@+id/about_tos"
            style="@style/about_text" />

        <TextView android:text="@string/about_pp"
            android:id="@+id/about_pp"
            style="@style/about_text" />

        <TextView android:text="@string/about_safety"
            android:id="@+id/about_safety"
            style="@style/about_text" />

    </LinearLayout>

</RelativeLayout>
