<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.bdlabs_linku.linku.EditEventActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Background photo -->
        <FrameLayout android:id="@+id/event_photo_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/accent_2"
            android:layout_marginBottom="@dimen/vertical_36dp">

            <ImageView
                android:id="@+id/event_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image_upload_placeholder"
                android:background="@drawable/background_navbar" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progress_bar"
                android:visibility="invisible" />
        </FrameLayout>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/pick_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_picture"
            fab:fab_colorNormal="@color/accent"
            fab:fab_colorPressed="@color/accent_darker"
            android:layout_gravity="right|bottom"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/event_photo_container"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vertical_48dp_minus_8dp"
                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                    android:id="@+id/event_title_input"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/add_event_title"
                    android:gravity="bottom|left"
                    android:hint="@string/placeholder_events_item_title"
                    android:textColorHint="@color/edit_hint"
                    android:background="#00000000"
                    android:imeOptions="actionDone" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"
                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vertical_48dp_minus_8dp"
                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                    android:id="@+id/event_description_input"
                    android:inputType="textCapSentences"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/add_event_fields"
                    android:gravity="bottom|left"
                    android:hint="@string/placeholder_events_item_description"
                    android:textColorHint="@color/edit_hint"
                    android:background="#00000000"
                    android:imeOptions="actionDone" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"
                    android:layout_marginBottom="@dimen/keyline_1_minus_8dp" />
            </LinearLayout>

            <!-- pick date and time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
                <ImageView
                    android:layout_width="@dimen/image_icon"
                    android:layout_height="@dimen/image_icon"
                    android:src="@drawable/ic_time"
                    android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                    android:layout_marginRight="@dimen/keyline_1_minus_8dp"
                    android:layout_gravity="center" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <!-- pick date -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:orientation="vertical"
                        android:weightSum="2"
                        android:layout_weight="1">
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/vertical_48dp_minus_8dp"
                            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                            android:id="@+id/event_day_input"
                            android:textColor="@color/edit_hint"
                            android:textSize="@dimen/add_event_fields"
                            android:textAllCaps="false"
                            android:gravity="center_vertical|left"
                            android:text="@string/placeholder_events_item_day"
                            android:drawableRight="@drawable/ic_down"
                            android:background="#00000000"
                            />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@color/divider_grey"/>
                    </LinearLayout>

                    <!-- pick time -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:orientation="vertical"
                        android:layout_weight="1" >
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/vertical_48dp_minus_8dp"
                            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
                            android:id="@+id/event_time_input"
                            android:textColor="@color/edit_hint"
                            android:textSize="@dimen/add_event_fields"
                            android:text="@string/placeholder_events_item_time"
                            android:textAllCaps="false"
                            android:gravity="left|center_vertical"
                            android:drawableRight="@drawable/ic_down"
                            android:background="#00000000"
                            />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@color/divider_grey"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cat_icon"
                    android:src="@drawable/ic_outdoor"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/keyline_1">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/vertical_48dp"
                        android:id="@+id/category"
                        android:prompt="@string/placeholder_category"/>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_grey" />
                </LinearLayout>
            </LinearLayout>

            <!-- pick location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
                <ImageView
                    android:layout_width="@dimen/image_icon"
                    android:layout_height="@dimen/image_icon"
                    android:src="@drawable/ic_position"
                    android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                    android:layout_marginRight="@dimen/keyline_1_minus_8dp"
                    android:layout_gravity="center" />
                <!-- pick location -->
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/event_location_input"
                    android:text="@string/placeholder_events_item_location"
                    android:gravity="center_vertical|left"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                    android:textColor="@color/accent"
                    android:layout_marginLeft="@dimen/keyline_1"
                    android:layout_gravity="bottom" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
